tests/ui/suggestions/dont-suggest-ref/simple.stderr
error[E0507]: cannot move out of `s` which is behind a shared reference
  --> $DIR/simple.rs:58:17
   |
LL |     let X(_t) = *s;
   |           --    ^^
   |           |
   |           data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let X(_t) = *s;
LL +     let X(_t) = s;
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:61:30
   |
LL |     if let Either::One(_t) = *r { }
   |                        --    ^^
   |                        |
   |                        data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     if let Either::One(_t) = *r { }
LL +     if let Either::One(_t) = r { }
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:64:33
   |
LL |     while let Either::One(_t) = *r { }
   |                           --    ^^
   |                           |
   |                           data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     while let Either::One(_t) = *r { }
LL +     while let Either::One(_t) = r { }
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:67:11
   |
LL |     match *r {
   |           ^^
...
LL |         Either::One(_t)
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     match *r {
LL +     match r {
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:73:11
   |
LL |     match *r {
   |           ^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     match *r {
LL +     match r {
   |

error[E0507]: cannot move out of `sm` which is behind a mutable reference
  --> $DIR/simple.rs:81:17
   |
LL |     let X(_t) = *sm;
   |           --    ^^^
   |           |
   |           data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let X(_t) = *sm;
LL +     let X(_t) = sm;
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:84:30
   |
LL |     if let Either::One(_t) = *rm { }
   |                        --    ^^^
   |                        |
   |                        data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     if let Either::One(_t) = *rm { }
LL +     if let Either::One(_t) = rm { }
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:87:33
   |
LL |     while let Either::One(_t) = *rm { }
   |                           --    ^^^
   |                           |
   |                           data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     while let Either::One(_t) = *rm { }
LL +     while let Either::One(_t) = rm { }
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:90:11
   |
LL |     match *rm {
   |           ^^^
...
LL |         Either::One(_t)
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     match *rm {
LL +     match rm {
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:96:11
   |
LL |     match *rm {
   |           ^^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     match *rm {
LL +     match rm {
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:103:11
   |
LL |     match *rm {
   |           ^^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     match *rm {
LL +     match rm {
   |

error[E0507]: cannot move out of index of `Vec<X>`
  --> $DIR/simple.rs:111:17
   |
LL |     let X(_t) = vs[0];
   |           --    ^^^^^
   |           |
   |           data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     let X(_t) = &vs[0];
   |                 +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:114:30
   |
LL |     if let Either::One(_t) = vr[0] { }
   |                        --    ^^^^^
   |                        |
   |                        data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     if let Either::One(_t) = &vr[0] { }
   |                              +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:117:33
   |
LL |     while let Either::One(_t) = vr[0] { }
   |                           --    ^^^^^
   |                           |
   |                           data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     while let Either::One(_t) = &vr[0] { }
   |                                 +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:120:11
   |
LL |     match vr[0] {
   |           ^^^^^
...
LL |         Either::One(_t)
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     match &vr[0] {
   |           +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:126:11
   |
LL |     match vr[0] {
   |           ^^^^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     match &vr[0] {
   |           +

error[E0507]: cannot move out of index of `Vec<X>`
  --> $DIR/simple.rs:134:17
   |
LL |     let X(_t) = vsm[0];
   |           --    ^^^^^^
   |           |
   |           data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     let X(_t) = &vsm[0];
   |                 +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:137:30
   |
LL |     if let Either::One(_t) = vrm[0] { }
   |                        --    ^^^^^^
   |                        |
   |                        data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     if let Either::One(_t) = &vrm[0] { }
   |                              +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:140:33
   |
LL |     while let Either::One(_t) = vrm[0] { }
   |                           --    ^^^^^^
   |                           |
   |                           data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     while let Either::One(_t) = &vrm[0] { }
   |                                 +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:143:11
   |
LL |     match vrm[0] {
   |           ^^^^^^
...
LL |         Either::One(_t)
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     match &vrm[0] {
   |           +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:149:11
   |
LL |     match vrm[0] {
   |           ^^^^^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     match &vrm[0] {
   |           +

error[E0507]: cannot move out of index of `Vec<Either>`
  --> $DIR/simple.rs:156:11
   |
LL |     match vrm[0] {
   |           ^^^^^^
...
LL |         Either::One(_t) => (),
   |                     -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |     match &vrm[0] {
   |           +

error[E0507]: cannot move out of dereference of `Wrap<WrappedField>`
  --> $DIR/simple.rs:165:27
   |
LL |     if let Some(mut _t) = (&wrapped_field).field { }
   |                 ------    ^^^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 data moved here because `_t` has type `X`, which does not implement the `Copy` trait

error[E0508]: cannot move out of type `[Option<X>; 1]`, a non-copy array
  --> $DIR/simple.rs:169:27
   |
LL |     if let Some(mut _t) = (&wrapped_index)[0] { }
   |                 ------    ^^^^^^^^^^^^^^^^^^^ cannot move out of here
   |                 |
   |                 data moved here because `_t` has type `X`, which does not implement the `Copy` trait

error[E0507]: cannot move out of `s` which is behind a shared reference
  --> $DIR/simple.rs:174:18
   |
LL |     let &X(_t) = s;
   |            --    ^
   |            |
   |            data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     let &X(_t) = s;
LL +     let X(_t) = s;
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:177:31
   |
LL |     if let &Either::One(_t) = r { }
   |                         --    ^
   |                         |
   |                         data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     if let &Either::One(_t) = r { }
LL +     if let Either::One(_t) = r { }
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:180:34
   |
LL |     while let &Either::One(_t) = r { }
   |                            --    ^
   |                            |
   |                            data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     while let &Either::One(_t) = r { }
LL +     while let Either::One(_t) = r { }
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:183:11
   |
LL |     match r {
   |           ^
LL |
LL |         &Either::One(_t)
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t)
LL +         Either::One(_t)
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:190:11
   |
LL |     match r {
   |           ^
LL |
LL |         &Either::One(_t) => (),
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of `r` as enum variant `One` which is behind a shared reference
  --> $DIR/simple.rs:196:11
   |
LL |     match r {
   |           ^
LL |
LL |         &Either::One(_t) => (),
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of `sm` which is behind a mutable reference
  --> $DIR/simple.rs:206:22
   |
LL |     let &mut X(_t) = sm;
   |                --    ^^
   |                |
   |                data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     let &mut X(_t) = sm;
LL +     let X(_t) = sm;
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:209:35
   |
LL |     if let &mut Either::One(_t) = rm { }
   |                             --    ^^
   |                             |
   |                             data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     if let &mut Either::One(_t) = rm { }
LL +     if let Either::One(_t) = rm { }
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:212:38
   |
LL |     while let &mut Either::One(_t) = rm { }
   |                                --    ^^
   |                                |
   |                                data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     while let &mut Either::One(_t) = rm { }
LL +     while let Either::One(_t) = rm { }
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:215:11
   |
LL |     match rm {
   |           ^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here
LL |
LL |         &mut Either::Two(_t) => (),
   |                          -- ...and here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::Two(_t) => (),
LL +         Either::Two(_t) => (),
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:222:11
   |
LL |     match rm {
   |           ^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:228:11
   |
LL |     match rm {
   |           ^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of `rm` as enum variant `One` which is behind a mutable reference
  --> $DIR/simple.rs:234:11
   |
LL |     match rm {
   |           ^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:248:21
   |
LL |     let (&X(_t),) = (&x.clone(),);
   |             --      ^^^^^^^^^^^^^
   |             |
   |             data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     let (&X(_t),) = (&x.clone(),);
LL +     let (X(_t),) = (&x.clone(),);
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:251:34
   |
LL |     if let (&Either::One(_t),) = (&e.clone(),) { }
   |                          --      ^^^^^^^^^^^^^
   |                          |
   |                          data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     if let (&Either::One(_t),) = (&e.clone(),) { }
LL +     if let (Either::One(_t),) = (&e.clone(),) { }
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:254:37
   |
LL |     while let (&Either::One(_t),) = (&e.clone(),) { }
   |                             --      ^^^^^^^^^^^^^
   |                             |
   |                             data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     while let (&Either::One(_t),) = (&e.clone(),) { }
LL +     while let (Either::One(_t),) = (&e.clone(),) { }
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:257:11
   |
LL |     match (&e.clone(),) {
   |           ^^^^^^^^^^^^^
LL |
LL |         (&Either::One(_t),)
   |                       -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         (&Either::One(_t),)
LL +         (Either::One(_t),)
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:267:25
   |
LL |     let (&mut X(_t),) = (&mut xm.clone(),);
   |                 --      ^^^^^^^^^^^^^^^^^^
   |                 |
   |                 data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     let (&mut X(_t),) = (&mut xm.clone(),);
LL +     let (X(_t),) = (&mut xm.clone(),);
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:270:38
   |
LL |     if let (&mut Either::One(_t),) = (&mut em.clone(),) { }
   |                              --      ^^^^^^^^^^^^^^^^^^
   |                              |
   |                              data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     if let (&mut Either::One(_t),) = (&mut em.clone(),) { }
LL +     if let (Either::One(_t),) = (&mut em.clone(),) { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:273:41
   |
LL |     while let (&mut Either::One(_t),) = (&mut em.clone(),) { }
   |                                 --      ^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     while let (&mut Either::One(_t),) = (&mut em.clone(),) { }
LL +     while let (Either::One(_t),) = (&mut em.clone(),) { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:276:11
   |
LL |     match (&mut em.clone(),) {
   |           ^^^^^^^^^^^^^^^^^^
LL |
LL |         (&mut Either::One(_t),) => (),
   |                           -- data moved here
LL |
LL |         (&mut Either::Two(_t),) => (),
   |                           -- ...and here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider removing the mutable borrow
   |
LL -         (&mut Either::One(_t),) => (),
LL +         (Either::One(_t),) => (),
   |
help: consider removing the mutable borrow
   |
LL -         (&mut Either::Two(_t),) => (),
LL +         (Either::Two(_t),) => (),
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:289:18
   |
LL |     let &X(_t) = &x;
   |            --    ^^
   |            |
   |            data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     let &X(_t) = &x;
LL +     let X(_t) = &x;
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:292:31
   |
LL |     if let &Either::One(_t) = &e { }
   |                         --    ^^
   |                         |
   |                         data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     if let &Either::One(_t) = &e { }
LL +     if let Either::One(_t) = &e { }
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:295:34
   |
LL |     while let &Either::One(_t) = &e { }
   |                            --    ^^
   |                            |
   |                            data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     while let &Either::One(_t) = &e { }
LL +     while let Either::One(_t) = &e { }
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:298:11
   |
LL |     match &e {
   |           ^^
LL |
LL |         &Either::One(_t)
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t)
LL +         Either::One(_t)
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:305:11
   |
LL |     match &e {
   |           ^^
LL |
LL |         &Either::One(_t) => (),
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:311:11
   |
LL |     match &e {
   |           ^^
LL |
LL |         &Either::One(_t) => (),
   |                      -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         &Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:318:22
   |
LL |     let &mut X(_t) = &mut xm;
   |                --    ^^^^^^^
   |                |
   |                data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     let &mut X(_t) = &mut xm;
LL +     let X(_t) = &mut xm;
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:321:35
   |
LL |     if let &mut Either::One(_t) = &mut em { }
   |                             --    ^^^^^^^
   |                             |
   |                             data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     if let &mut Either::One(_t) = &mut em { }
LL +     if let Either::One(_t) = &mut em { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:324:38
   |
LL |     while let &mut Either::One(_t) = &mut em { }
   |                                --    ^^^^^^^
   |                                |
   |                                data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     while let &mut Either::One(_t) = &mut em { }
LL +     while let Either::One(_t) = &mut em { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:327:11
   |
LL |     match &mut em {
   |           ^^^^^^^
LL |
LL |         &mut Either::One(_t)
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t)
LL +         Either::One(_t)
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:334:11
   |
LL |     match &mut em {
   |           ^^^^^^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:340:11
   |
LL |     match &mut em {
   |           ^^^^^^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:346:11
   |
LL |     match &mut em {
   |           ^^^^^^^
LL |
LL |         &mut Either::One(_t) => (),
   |                          -- data moved here because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -         &mut Either::One(_t) => (),
LL +         Either::One(_t) => (),
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:202:11
   |
LL |     fn f1(&X(_t): &X) { }
   |           ^^^--^
   |              |
   |              data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     fn f1(&X(_t): &X) { }
LL +     fn f1(X(_t): &X) { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:240:11
   |
LL |     fn f2(&mut X(_t): &mut X) { }
   |           ^^^^^^^--^
   |                  |
   |                  data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     fn f2(&mut X(_t): &mut X) { }
LL +     fn f2(X(_t): &mut X) { }
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/simple.rs:263:11
   |
LL |     fn f3((&X(_t),): (&X,)) { }
   |           ^^^^--^^^
   |               |
   |               data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -     fn f3((&X(_t),): (&X,)) { }
LL +     fn f3((X(_t),): (&X,)) { }
   |

error[E0507]: cannot move out of a mutable reference
  --> $DIR/simple.rs:283:11
   |
LL |     fn f4((&mut X(_t),): (&mut X,)) { }
   |           ^^^^^^^^--^^^
   |                   |
   |                   data moved here because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: consider removing the mutable borrow
   |
LL -     fn f4((&mut X(_t),): (&mut X,)) { }
LL +     fn f4((X(_t),): (&mut X,)) { }
   |

error[E0507]: cannot move out of `a.a` as enum variant `Some` which is behind a shared reference
  --> $DIR/simple.rs:359:20
   |
LL |     let Some(_s) = a.a else {
   |              --    ^^^
   |              |
   |              data moved here because `_s` has type `String`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |     let Some(ref _s) = a.a else {
   |              +++

error: aborting due to 63 previous errors

Some errors have detailed explanations: E0507, E0508.
For more information about an error, try `rustc --explain E0507`.
